--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               B.Tech (CSE – Data Science, 2026) student skilled in C++, Python, JavaScript, and React, with experience in full-stack development, data analytics, and DSA. Seeking SDE role to build impactful solutions.
             </p>
             <div class="btn-box">
-              <a href="file:///C:/Users/ISHITA/Downloads/IshitaChitranshi_resume.pdf" class="btn" download="IshitaChitranshi_resume.pdf">Download CV</a>
+              <a href="https://drive.google.com/file/d/1pTUOIDXqv_bO-z5s3IDvRtqnRfI5FrYO/view?usp=sharing" class="btn" download="IshitaChitranshi_resume.pdf">Download CV</a>
               <a href="#" class="btn contact-me">Contact Me!</a>
             </div>
           </div>
@@ -45,9 +45,6 @@
                 <h3>Bachelor of Technology, Data Science</h3>
                 <p>Pranveer Singh Institute of Technology, Kanpur</p>
                 <p>BTech 4th year affiliated to AKTU</p>
-                <p>1st year with 64.46%</p>
-                <p>2nd year with 68%</p>
-                <p>3rd year with 70.1%</p>
               </div>
               <div class="workeduc-content">
                 <span class="year"><i class="bx bxs-calendar"></i>03/2021-03/2022</span>
