--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           A motivated BTech (CSE - Data Science, graduating 2026) student with strong problem-solving skills and hands-on experience in full-stack development, data analytics. Proficient in C++, Python, JavaScript, and React, with a solid foundation in data structures and algorithms. I am experienced in developing scalable web applications and analytical dashboards, with a passion for building efficient, real-world solutions. I'm seeking an SDE to apply my technical expertise and contribute to impactful engineering projects.
         </p>
         <div class="btn-box">
-          <a href="file:///C:/Users/ISHITA/Downloads/IshitaChitranshi_resume.pdf" class="btn" download="IshitaChitranshi_resume.pdf">Download CV</a>
+          <a href="https://drive.google.com/file/d/1pTUOIDXqv_bO-z5s3IDvRtqnRfI5FrYO/view?usp=sharing">Download CV</a>
           <a href="#contact-mobile" class="btn contact-me">Contact Me!</a>
         </div>
       </div>
@@ -230,9 +230,7 @@
             <h3>Bachelor of Technology, Data Science</h3>
             <p>Pranveer Singh Institute of Technology, Kanpur</p>
             <p>BTech 4th year affiliated to AKTU</p>
-            <p>1st year with 64.46%</p>
-            <p>2nd year with 68%</p>
-            <p>3rd year with 70.1%</p>
+          
           </div>
           <div class="workeduc-content">
             <span class="year"><i class="bx bxs-calendar"></i>03/2021-03/2022</span>
@@ -284,7 +282,7 @@
           <div class="services-content">
             <i class="bx bx-bar-chart-alt"></i>
             <h3>Backend</h3>
-            <p>Node.js, Flask</p>
+            <p>Node.js, Flask, Express.js</p>
           </div>
           <div class="services-content">
             <i class="bx bx-data"></i>
