--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               B.Tech (CSE – Data Science, 2026) student skilled in C++, Python, JavaScript, and React, with experience in full-stack development, data analytics, and DSA. Seeking SDE role to build impactful solutions.
             </p>
             <div class="btn-box">
-              <a href="https://drive.google.com/file/d/1pTUOIDXqv_bO-z5s3IDvRtqnRfI5FrYO/view?usp=sharing" class="btn" download="IshitaChitranshi_resume.pdf">Download CV</a>
+              <a href="https://d8it4huxumps7.cloudfront.net/uploads/profileData/files/38798483/chitranshiishita_68c8ed1835ab4.pdf">Download CV</a>
               <a href="#" class="btn contact-me">Contact Me!</a>
             </div>
           </div>
